# sparta_d

./: .gitignore  README.md
homework/week01/: index.html  shopping.html
homework/week02/: 07_1_alert.html  07_2_input_val.html  12_1_alert.html  12_2_alert_api.html  14_1.html  14_2.html  14_3.html
homework/week03/: genie_music.py  kakao_search.py  selenium_ex.py
homework/week04/: README.md  app.py  config.py  pyproject.toml  sparta.db
homework/week05/: config.py  pyproject.toml
week01/: flex.html  index.html  login.html
week01/css/: flex.css  login.css
week02/: count.js  count.test.js  email_split.js  index.html  jquery_question.html  memo.html  mise.html  package-lock.json  package.json  pattern.js  pattern.test.js  pattern_test.js  repetitive.js
week02/css/: memo.css
week02/js/: jquery_question.js  memo.js  mise.js
week03/: cityair.py  crawl_test.py  memo.html  naver_book_api.py  naver_ex.py  papa_api.py  papago_ex.py  read_mongo.py  week03.md
week04/: app.py  pymongo_1.py  pymongo_read.py  pyproject.toml  week4.md
week05/: pyproject.toml  week05.md
week05/sparta/: __init__.py
week05/sparta/static/memo/: memo_landing.js  memo_login.js
week05/sparta/templates/memo/: callback.html  memo_landing.html  memo_login.html  memo_signup.html
week05/sparta/views/: memo_views.py
week06/: .env  pyproject.toml
week06/app/: __init__.py  config.py
week06/app/templates/: callback.html  index.html
week06/app/views/: api.py  memo.py  user.py
week06/sparta/views/: main.py
week06/tests/: conftest.py
week06/tests/views/: test_api.py  test_memo.py
(+39 files in other folders)
