[tool.poetry]
name = "week05"
version = "0.1.0"
description = ""
authors = ["diligejy <sjy049@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.0"
pymongo = "^3.11.4"
requests = "^2.25.1"
PyJWT = "^2.1.0"
python-dotenv = "^0.17.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
